--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Archiver</title>
     <link rel="stylesheet" href="asset/css/main.css">
     <link rel="stylesheet" href="asset/css/style.css">
     <link rel="stylesheet" href="/asset/css/reponsive.css">
@@ -30,7 +30,7 @@
         </div>
     </header>
     <div class="slider">
-        <img src="asset/img/architect.jpg" alt="" class="slider-img">
+        <img src="./asset/img/architect.jpg" alt="" class="slider-img">
         <div class="slider-container">
             <p class="slider-container-br">BR</p>
             <p class="slider-container-architects">Architects</p>
@@ -42,49 +42,49 @@
             <div class="project-container">
                 <div class="project-container-item">
                     <div class="project-container-item-img-block">
-                        <img src="asset/img/house5.jpg" alt="" class="project-container-item-img">
+                        <img src="./asset/img/house5.jpg" alt="" class="project-container-item-img">
                         <span class="project-container-item-name">Summer House</span>
                     </div>
                 </div>
                 <div class="project-container-item">
                     <div class="project-container-item-img-block">
-                        <img src="asset/img/house2.jpg" alt="" class="project-container-item-img">
+                        <img src="./asset/img/house2.jpg" alt="" class="project-container-item-img">
                         <span class="project-container-item-name">Summer House</span>
                     </div>
                 </div>
                 <div class="project-container-item">
                     <div class="project-container-item-img-block">
-                        <img src="asset/img/house3.jpg" alt="" class="project-container-item-img">
+                        <img src="./asset/img/house3.jpg" alt="" class="project-container-item-img">
                         <span class="project-container-item-name">Summer House</span>
                     </div>
                 </div>
                 <div class="project-container-item">
                     <div class="project-container-item-img-block">
-                        <img src="asset/img/house4.jpg" alt="" class="project-container-item-img">
+                        <img src="./asset/img/house4.jpg" alt="" class="project-container-item-img">
                         <span class="project-container-item-name">Summer House</span>
                     </div>
                 </div>
                 <div class="project-container-item">
                     <div class="project-container-item-img-block">
-                        <img src="asset/img/house2.jpg" alt="" class="project-container-item-img">
+                        <img src="./asset/img/house2.jpg" alt="" class="project-container-item-img">
                         <span class="project-container-item-name">Summer House</span>
                     </div>
                 </div>
                 <div class="project-container-item">
                     <div class="project-container-item-img-block">
-                        <img src="asset/img/house5.jpg" alt="" class="project-container-item-img">
+                        <img src="./asset/img/house5.jpg" alt="" class="project-container-item-img">
                         <span class="project-container-item-name">Summer House</span>
                     </div>
                 </div>
                 <div class="project-container-item">
                     <div class="project-container-item-img-block">
-                        <img src="asset/img/house4.jpg" alt="" class="project-container-item-img">
+                        <img src="./asset/img/house4.jpg" alt="" class="project-container-item-img">
                         <span class="project-container-item-name">Summer House</span>
                     </div>
                 </div>
                 <div class="project-container-item">
                     <div class="project-container-item-img-block">
-                        <img src="asset/img/house3.jpg" alt="" class="project-container-item-img">
+                        <img src="./asset/img/house3.jpg" alt="" class="project-container-item-img">
                         <span class="project-container-item-name">Summer House</span>
                     </div>
                 </div>
@@ -97,7 +97,7 @@
             </div>
             <div class="about-team pd">
                 <div class="about-member">
-                    <img src="asset/img/team2.jpg" alt="" class="about-member-img">
+                    <img src="./asset/img/team2.jpg" alt="" class="about-member-img">
                     <div class="about-member-container">
                         <h4 class="about-member-name">John Doe</h4>
                         <p class="about-member-office">CEO & Founder</p>
@@ -106,7 +106,7 @@
                     </div>
                 </div>
                 <div class="about-member">
-                    <img src="asset/img/team1.jpg" alt="" class="about-member-img">
+                    <img src="./asset/img/team1.jpg" alt="" class="about-member-img">
                     <div class="about-member-container">
                         <h4 class="about-member-name">John Doe</h4>
                         <p class="about-member-office">CEO & Founder</p>
@@ -115,7 +115,7 @@
                     </div>
                 </div>
                 <div class="about-member">
-                    <img src="asset/img/team3.jpg" alt="" class="about-member-img">
+                    <img src="./asset/img/team3.jpg" alt="" class="about-member-img">
                     <div class="about-member-container">
                         <h4 class="about-member-name">John Doe</h4>
                         <p class="about-member-office">CEO & Founder</p>
@@ -124,7 +124,7 @@
                     </div>
                 </div>
                 <div class="about-member">
-                    <img src="asset/img/team4.jpg" alt="" class="about-member-img">
+                    <img src="./asset/img/team4.jpg" alt="" class="about-member-img">
                     <div class="about-member-container">
                         <h4 class="about-member-name">John Doe</h4>
                         <p class="about-member-office">CEO & Founder</p>
@@ -148,7 +148,7 @@
                 <button class="contact-button">SEND MASSAGE</button>
             </form>
             </div>
-            <img src="asset/img/map.jpg" alt="" class="contact-map pd">
+            <img src="./asset/img/map.jpg" alt="" class="contact-map pd">
         </div>
     </div>
     <footer class="footer">
