--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Archiver</title>
     <link rel="stylesheet" href="asset/css/main.css">
     <link rel="stylesheet" href="asset/css/style.css">
-    <link rel="stylesheet" href="/asset/css/reponsive.css">
+    <link rel="stylesheet" href="asset/css/reponsive.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
