--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <div class="header-container">
             <div class="header-logo">
                 <a href="" class="header-logo-link linka">
-                    <p class="header-logo-link-bold">BR</p>
+                    <p class="header-logo-link-bold">BO</p>
                     <p class="header-logo-link-no-bold">Architects</p>
                 </a>
             </div>
@@ -153,7 +153,7 @@
     </div>
     <footer class="footer">
         <div class="footer-container">
-            Powered by <a href="" class="footer-container-link">w3.css</a>
+            Powered by <a href="" class="footer-container-link">BOOOOO</a>
         </div>
     </footer>
 </body>
